[package]
name = "htcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = "0.4.23"
clap = "4.1.8"
ecs-logger = "1.0.0"
env_logger = "0.10.0"
futures = "0.3.26"
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio = { version = "1.26.0", features = ["full"] }
warp = "0.3.3"
